refactor: simplify replay protocol and league boundaries